Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FunDec CompSt
    6       | Specifier SEMI

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | /* empty */

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP
   20       | error RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec
   24         | error COMMA
   25         | error RB

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | /* empty */

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | error WHILE LP Exp RP
   38     | error IF LP Exp RP
   39     | error ELSE
   40     | ELSE LP Exp RP error
   41     | Exp error

   42 DefList: Def DefList
   43        | /* empty */

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | HEX
   69    | OCT
   70    | WRONGHEX
   71    | WRONGOCT

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 20 24 25 27 36 37 38 39 40 41 45
INT (258) 17 66
FLOAT (259) 67
SEMI (260) 4 6 30 32 36 44
COMMA (261) 8 21 24 47 72
ID (262) 13 15 16 18 19 61 62 64 65
TYPE (263) 9
OCT (264) 69
HEX (265) 68
WRONGHEX (266) 70
WRONGOCT (267) 71
ASSIGNOP (268) 49 50
OR (269) 52
AND (270) 51
RELOP (271) 53
PLUS (272) 54
MINUS (273) 55 59
DIV (274) 57
STAR (275) 56
NOT (276) 60
RC (277) 11 26 27
LC (278) 11 26
DOT (279) 64
RB (280) 17 25 63
LB (281) 17 63
RP (282) 18 19 20 33 34 35 37 38 40 58 61 62
LP (283) 18 19 33 34 35 37 38 40 58 61 62
LOWER_THAN_ELSE (284)
RETURN (285) 32
STRUCT (286) 11 12
WHILE (287) 35 37
ELSE (288) 34 39 40
IF (289) 33 34 38


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 2
ExtDef (38)
    on left: 4 5 6, on right: 2
ExtDecList (39)
    on left: 7 8, on right: 4 8
Specifier (40)
    on left: 9 10, on right: 4 5 6 23 44 45
StructSpecifier (41)
    on left: 11 12, on right: 10
OptTag (42)
    on left: 13 14, on right: 11
Tag (43)
    on left: 15, on right: 12
VarDec (44)
    on left: 16 17, on right: 7 8 17 23 48 49
FunDec (45)
    on left: 18 19 20, on right: 5
VarList (46)
    on left: 21 22, on right: 18 21
ParamDec (47)
    on left: 23 24 25, on right: 21 22
CompSt (48)
    on left: 26 27, on right: 5 31
StmtList (49)
    on left: 28 29, on right: 26 28
Stmt (50)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 28 33 34
    35
DefList (51)
    on left: 42 43, on right: 11 26 42
Def (52)
    on left: 44 45, on right: 42
DecList (53)
    on left: 46 47, on right: 44 45 47
Dec (54)
    on left: 48 49, on right: 46 47
Exp (55)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71, on right: 30 32 33 34 35 37 38 40 41 49 50 51 52 53
    54 55 56 57 58 59 60 63 64 72 73
Args (56)
    on left: 72 73, on right: 61 72


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


state 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FunDec CompSt
    6       | Specifier . SEMI

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


state 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


state 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

   20 FunDec: error . RP

    RP  shift, and go to state 20


state 14

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


state 15

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 16 (VarDec)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


state 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


state 18

    5 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


state 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

   20 FunDec: error RP .

    $default  reduce using rule 20 (FunDec)


state 21

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


state 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 23

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


state 24

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


state 25

   27 CompSt: error . RC

    RC  shift, and go to state 39


state 26

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


state 27

    5 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error

    ID  shift, and go to state 36

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


state 29

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


state 30

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


state 31

   24 ParamDec: error . COMMA
   25         | error . RB

    COMMA  shift, and go to state 46
    RB     shift, and go to state 47


state 32

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


state 33

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


state 34

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


state 35

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 22 (VarList)


state 36

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 37

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 38

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


state 39

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


state 40

   26 CompSt: LC DefList . StmtList RC

    error     shift, and go to state 52
    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LC        shift, and go to state 26
    LP        shift, and go to state 62
    RETURN    shift, and go to state 63
    WHILE     shift, and go to state 64
    ELSE      shift, and go to state 65
    IF        shift, and go to state 66

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


state 41

   17 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 24

    $default  reduce using rule 48 (Dec)


state 42

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


state 43

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 46 (DecList)


state 44

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


state 45

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


state 46

   24 ParamDec: error COMMA .

    $default  reduce using rule 24 (ParamDec)


state 47

   25 ParamDec: error RB .

    $default  reduce using rule 25 (ParamDec)


state 48

   17 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


state 49

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


state 50

   21 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 75
    ParamDec         go to state 35


state 51

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


state 52

   27 CompSt: error . RC
   36 Stmt: error . SEMI
   37     | error . WHILE LP Exp RP
   38     | error . IF LP Exp RP
   39     | error . ELSE

    SEMI   shift, and go to state 76
    RC     shift, and go to state 39
    WHILE  shift, and go to state 77
    ELSE   shift, and go to state 78
    IF     shift, and go to state 79


state 53

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 54

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 55

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 65 (Exp)


state 56

   69 Exp: OCT .

    $default  reduce using rule 69 (Exp)


state 57

   68 Exp: HEX .

    $default  reduce using rule 68 (Exp)


state 58

   70 Exp: WRONGHEX .

    $default  reduce using rule 70 (Exp)


state 59

   71 Exp: WRONGOCT .

    $default  reduce using rule 71 (Exp)


state 60

   59 Exp: MINUS . Exp

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 81


state 61

   60 Exp: NOT . Exp

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 82


state 62

   58 Exp: LP . Exp RP

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 83


state 63

   32 Stmt: RETURN . Exp SEMI

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 84


state 64

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 85


state 65

   40 Stmt: ELSE . LP Exp RP error

    LP  shift, and go to state 86


state 66

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 87


state 67

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


state 68

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 88


state 69

   28 StmtList: Stmt . StmtList

    error     shift, and go to state 52
    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LC        shift, and go to state 26
    LP        shift, and go to state 62
    RETURN    shift, and go to state 63
    WHILE     shift, and go to state 64
    ELSE      shift, and go to state 65
    IF        shift, and go to state 66

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 89
    Stmt      go to state 69
    Exp       go to state 70


state 70

   30 Stmt: Exp . SEMI
   41     | Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    error     shift, and go to state 90
    SEMI      shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    OR        shift, and go to state 93
    AND       shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    DIV       shift, and go to state 98
    STAR      shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


state 71

   49 Dec: VarDec ASSIGNOP . Exp

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 102


state 72

   45 Def: Specifier DecList error .

    $default  reduce using rule 45 (Def)


state 73

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


state 74

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 41
    DecList  go to state 103
    Dec      go to state 43


state 75

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


state 76

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


state 77

   37 Stmt: error WHILE . LP Exp RP

    LP  shift, and go to state 104


state 78

   39 Stmt: error ELSE .

    $default  reduce using rule 39 (Stmt)


state 79

   38 Stmt: error IF . LP Exp RP

    LP  shift, and go to state 105


state 80

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    RP        shift, and go to state 106
    LP        shift, and go to state 62

    Exp   go to state 107
    Args  go to state 108


state 81

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DIV   shift, and go to state 98
    STAR  shift, and go to state 99
    DOT   shift, and go to state 100
    LB    shift, and go to state 101

    $default  reduce using rule 59 (Exp)


state 82

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 60 (Exp)


state 83

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 92
    OR        shift, and go to state 93
    AND       shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    DIV       shift, and go to state 98
    STAR      shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RP        shift, and go to state 109


state 84

   32 Stmt: RETURN Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 110
    ASSIGNOP  shift, and go to state 92
    OR        shift, and go to state 93
    AND       shift, and go to state 94
    RELOP     shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    DIV       shift, and go to state 98
    STAR      shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


state 85

   35 Stmt: WHILE LP . Exp RP Stmt

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 111


state 86

   40 Stmt: ELSE LP . Exp RP error

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 112


state 87

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT       shift, and go to state 53
    FLOAT     shift, and go to state 54
    ID        shift, and go to state 55
    OCT       shift, and go to state 56
    HEX       shift, and go to state 57
    WRONGHEX  shift, and go to state 58
    WRONGOCT  shift, and go to state 59
    MINUS     shift, and go to state 60
    NOT       shift, and go to state 61
    LP        shift, and go to state 62

    Exp  go to state 113


state 88

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 89

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 90

   41 Stmt: Exp error .

    $default  reduce using rule 41 (Stmt)


state 91

   30 Stmt: Exp SEMI .
